--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-16  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
+
+	* be.po: Updated Belarusian translation.
+	
 2007-01-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* it.po: Updated the Italian translation by
