Updated the Polish translations by Szymon Kałasz for the libexo, terminal, thunar and xarchiver packages and updated the French ones
(Old svn revision: 24506)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,16 @@
+2007-01-16  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* pl.po: Updated the Polish translation by
+	Szymon Kałasz <szymon_maestro@gazeta.pl>
+
 2007-01-16  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
 	* be.po: Updated Belarusian translation.
 	
+2007-01-15  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Fixed the French translation.
+
 2007-01-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* it.po: Updated the Italian translation by
