--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.13svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
-"PO-Revision-Date: 2007-01-12 14:24+0100\n"
+"PO-Revision-Date: 2007-01-15 14:48+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -779,19 +779,19 @@ msgstr "Lecteur de disquettes"
 
 #: ../exo-hal/exo-hal.c:461
 msgid "Compact Flash Drive"
-msgstr "Lecteur de cartes Compact Flash"
+msgstr "Carte Compact Flash"
 
 #: ../exo-hal/exo-hal.c:465
 msgid "Memory Stick Drive"
-msgstr "Lecteur de cartes Memory Stick"
+msgstr "Carte Memory Stick"
 
 #: ../exo-hal/exo-hal.c:469
 msgid "Smart Media Drive"
-msgstr "Lecteur de cartes Smart Media"
+msgstr "Carte Smart Media"
 
 #: ../exo-hal/exo-hal.c:473
 msgid "SD/MMC Drive"
-msgstr "Lecteur de cartes SD/MMC"
+msgstr "Carte SD/MMC"
 
 #: ../exo-hal/exo-hal.c:477
 msgid "Zip Drive"
