Updated the Polish, German and French translations by, respectively, Szymon Kalasz, Enrico troger and me.
(Old svn revision: 24534)

--- a/po-doc/fr.po
+++ b/po-doc/fr.po
@@ -1,13 +1,11 @@
-# $Id: fr.po 21488 2006-10-28 18:51:03Z maximilian $
-#
 # French translation of the manual from the libexo package.
-# Copyright (C) 2004-2006 os-cillation e.K.
+# Copyright (C) 2004-2007 os-cillation e.K.
 # This file is distributed under the same license as the libexo package.
-# Maximilian Schleiss <maxschleiss@bluewin.ch>, 2006.
+# Maximilian Schleiss <maxschleiss@bluewin.ch>, 2006-2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo VERSION\n"
+"Project-Id-Version: libexo\n"
 "POT-Creation-Date: 2006-05-05 02:50+0900\n"
 "PO-Revision-Date: 2006-10-28 18:46+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
