--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-18  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Minor changes to the French translation.
+
 2006-11-19  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* pt_BR.po: Added Brazilian translation and updated LINGUAS
