--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-19  Stavros Giannouris <stavrosg@hellug.gr>
+
+	* el.po: Updated Greek translation.
+
 2007-01-18  Alexander Toresson <alexander.toresson@gmail.com>
 
 	* sv.po: Updated Swedish translation.
@@ -218,7 +222,7 @@
 	* de.po: Updated German translations
 	* ka.po: Add Georgian translations
 
-2006-08-27  Stavros Giannouris <stavrosg@serverhive.com>
+2006-08-27  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translations update
 
@@ -299,11 +303,11 @@
 
 	* *.po: Update Project-Id-Version.
 
-2006-07-07  Stavros Giannouris <stavrosg@serverhive.com>
+2006-07-07  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Minor corrections.
 
-2006-06-25  Stavros Giannouris <stavrosg@serverhive.com>
+2006-06-25  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations.
 
@@ -379,7 +383,7 @@
 	* pl.po: Updated Polish translations by Piotr Malinski
 	  <admin@rk.edu.pl>.
 
-2006-05-07  Stavros Giannouris <stavrosg@serverhive.com>
+2006-05-07  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update.
 
@@ -401,7 +405,7 @@
 
 	* pt_BR.po: Updated Brazilian Portuguese translations.
 
-2006-05-06  Stavros Giannouris <stavrosg@serverhive.com>
+2006-05-06  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update.
 
@@ -526,7 +530,7 @@
 	* ja.po: Updated Japanese translations.
 	* LINGUAS: Added missing language codes.
 
-2006-04-15  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-15  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
 
@@ -554,7 +558,7 @@
 
 	* ca.po: [i18n] catalan little of work on catalan translations
 
-2006-04-01  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-01  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation by Stathis Kamperis
 
@@ -601,7 +605,7 @@
 	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
 	  ja.po, libexo-0.3.pot, pt_BR.po: Updated.
 
-2006-03-03  Stavros Giannouris <stavrosg@serverhive.com>
+2006-03-03  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations
 
@@ -624,7 +628,7 @@
 	* fi.po: Updated Finnish translations by Jari Rahkonen
 	  <jari.rahkonen@pp2.inet.fi>.
 
-2006-02-24  Stavros Giannouris <stavrosg@serverhive.com>
+2006-02-24  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation
 
@@ -645,7 +649,7 @@
 	  ja.po, libexo-0.3.pot, pt_BR.po: Merge changed/new strings.
 	* de.po: Update the german translations.
 
-2006-02-22  Stavros Giannouris <stavrosg@serverhive.com>
+2006-02-22  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations
 
@@ -722,7 +726,7 @@
 
 	* ja.po: Updated Japanese translations.
 
-2005-11-27  Stavros Giannouris <stavrosg@serverhive.com>
+2005-11-27  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
 
@@ -772,7 +776,7 @@
 
 	* de.po, en_GB.po, es.po, fi.po, fr.po, ja.po: Updated.
 
-2005-10-16 Stavros Giannouris <stavrosg@serverhive.com>
+2005-10-16 Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Add Greek translations in libexo/trunk
 
