Updated the Russian and Esperanto translations by their respective translators.
(Old svn revision: 24600)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* ru.po: Updated the Russian translation by
+	Andrey Fedoseev <andrey.fedoseev@gmail.com>
+
 2001-01-19  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
