--- a/README
+++ b/README
@@ -9,8 +9,8 @@ libexo is targeted at application development.
 Current state
 =============
 
-libexo is currently considered BETA quality. The first officially suggested
-production release will be labeled 1.0.
+libexo is considered ready for production use. You do no longer need to
+define the EXO_API_SUBJECT_TO_CHANGE preprocessor symbol.
 
 
 Installation
