--- a/THANKS
+++ b/THANKS
@@ -16,6 +16,9 @@ Translators (sorted by language):
 ----------------------------------
 These people have translated libexo to foreign languages.
 
+ Alexander Nyakhaychyk <nyakhaychyk@gmail.com>
+  * be translations
+
  Carles Muñoz Gorriz <paurullan@bulma.net>
   * ca translations
 
@@ -24,6 +27,9 @@ These people have translated libexo to foreign languages.
 
  Michal Várady <miko.vaji@gmail.com>
   * cs translations
+
+ Geraint Rowlands <ansbaradigeidfran@gmail.com>
+  * cy translations
 
  Benedikt Meurer <benny@xfce.org>
   * de translations
@@ -81,6 +87,15 @@ These people have translated libexo to foreign languages.
 
  mantas <mantaz@users.sourceforge.net>
   * lt translations
+
+ Pavle Jonoski <jonoski.pavle@gmail.com>
+  * mk translations
+
+ Stephan Arts <psyBSD@gmail.com>
+  * nl translations
+
+ Amanpreet Singh Alam <aalam@users.sf.net>
+  * pa translations
 
  Piotr Maliński <admin@rk.edu.pl>
   * pl translations
