--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-20  Benedikt Meurer <benny@xfce.org>
+
+	* === Released 0.3.2 ===
+	* *.po: Update Project-Id-Version.
+
 2007-01-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* ru.po: Updated the Russian translation by
