--- a/po/be.po
+++ b/po/be.po
@@ -1,11 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Belarusian translations of the exo package.
+# Copyright (C) 2003-2007 Benedikt Meurer <benny@xfce.org>.
+# This file is distributed under the same license as the exo package.
+# Alexander Nyakhaychyk <nyakhaychyk@gmail.com>, 2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo 0.3\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
 "PO-Revision-Date: 2007-01-12 01:53+0300\n"
