--- a/po/fi.po
+++ b/po/fi.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.12rc2\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-11 12:54+0200\n"
 "PO-Revision-Date: 2007-01-11 13:06+0200\n"
