--- a/po/mk.po
+++ b/po/mk.po
@@ -1,11 +1,11 @@
 # translation of libexo-0.3.po to Macedonian
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Copyright (C) 2003-2007 Benedikt Meurer <benny@xfce.org>
+# This file is distributed under the same license as the exo package.
 #
 # Pavle Jonoski <jonoski.pavle@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo-0.3\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
 "PO-Revision-Date: 2006-12-24 01:41-0500\n"
