--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-01-20	Benedikt Meurer <benny@xfce.org>
+
+	* === Released 0.3.2 ===
+	* NEWS, configure.in.in: Bump version.
+	* THANKS: Update translator credits.
+	* po/*.po: Update Project-Id-Version.
+	* README, docs/reference/Makefile.am, exo-desktop-item-edit/Makefile.am,
+	  exo-hal/Makefile.am, exo-helper/Makefile.am, exo-mount/Makefile.am,
+	  exo-open/Makefile.am, exo/Makefile.am, exo/exo.h, python/Makefile.am,
+	  tests/Makefile.am: Drop EXO_API_SUBJECT_TO_CHANGE, as the 0.3 API
+	  is the stable API for the Xfce 4.4 branch now.
+
 2007-01-15	Benedikt Meurer <benny@xfce.org>
 
 	* exo-mount/exo-mount-hal.c(exo_mount_hal_device_from_udi): Release
@@ -13,7 +25,7 @@
 2007-01-15	Benedikt Meurer <benny@xfce.org>
 
 	* exo-hal/exo-hal.c(exo_hal_volume_compute_display_name): Fix
-	  compilation on adm64, using G_GUINT64_FORMAT instead of assuming
+	  compilation on amd64, using G_GUINT64_FORMAT instead of assuming
 	  it's llu. Bug #2758.
 
 2007-01-11	Benedikt Meurer <benny@xfce.org>
