--- a/po/cs.po
+++ b/po/cs.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.12rc2\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-07 23:35+0100\n"
 "PO-Revision-Date: 2007-01-08 00:53+0100\n"
