--- a/po/el.po
+++ b/po/el.po
@@ -6,7 +6,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.12rc2\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-19 10:10+0200\n"
 "PO-Revision-Date: 2007-01-19 10:09+0200\n"
