--- a/po/eu.po
+++ b/po/eu.po
@@ -6,7 +6,7 @@
 # Piarres Beobide <pi@beobide.net>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.12rc2\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
 "PO-Revision-Date: 2007-01-08 14:23+0100\n"
