--- a/po/he.po
+++ b/po/he.po
@@ -6,7 +6,7 @@
 # Yuval Tanny <tanai@int.gov.il>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: he\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
 "PO-Revision-Date: 2007-01-19 14:50+0200\n"
