--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@
 # Dario <dariolinux@tiscali.it>, 2006, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: it\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
 "PO-Revision-Date: 2007-01-14 12:16+0100\n"
