--- a/po/ro.po
+++ b/po/ro.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.12rc2\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-09 23:46+0100\n"
 "PO-Revision-Date: 2006-06-04 22:41+0300\n"
