--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-28	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Bump required HAL version to 0.5.7. Bug #2828.
+
 2007-01-20	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
