--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-04  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Fixed the credits string.
+
 2007-01-18  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Minor changes to the French translation.
