--- a/po-doc/fr.po
+++ b/po-doc/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libexo\n"
 "POT-Creation-Date: 2006-05-05 02:50+0900\n"
-"PO-Revision-Date: 2006-10-28 18:46+0100\n"
+"PO-Revision-Date: 2007-02-01 23:51+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -217,5 +217,4 @@ msgstr "You should have received a copy of the GNU General Public License along 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
 #: ../docs/manual/C/exo-preferred-applications.xml.in:0(None)
 msgid "translator-credits"
-msgstr "Crédits-traducteur"
-
+msgstr "Maximilian Schleiss <maxschleiss@bluewin.ch>, 2006, 2007."
