--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Fixed accelerators.
+
 2007-01-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* sq.po: Added the Albanian translation by
