Adding information to the ChangeLog
(Old svn revision: 24882)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-08  Mohamed Magdy <mohamed.m.k@gmail.com>
+
+	* ar.po: initial commit.
+    *LINGUAS: adding ar language code
+	
 2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Fixed accelerators.
