2007-02-12	Benedikt Meurer <benny@xfce.org>
	* exo/exo-mount-point.c: Fix compilation on Solaris 2.8. Bug #2798.




(Old svn revision: 24963)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-02-12	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-mount-point.c: Fix compilation on Solaris 2.8. Bug #2798.
+
+2007-02-12	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in, exo/exo-mount-point.c: Fix compilation on newer
 	  NetBSD versions. Bug #2808.
 
