--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Updated the French translation.
+
 2007-02-12  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Merge new strings.
