Updating libexo basque translation
(Old svn revision: 25011)

--- a/po/eu.po
+++ b/po/eu.po
@@ -1130,9 +1130,8 @@ msgid "Opera Mail"
 msgstr "Opera Posta"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
-#, fuzzy
 msgid "Claws Mail"
-msgstr "Mozilla Posta"
+msgstr "Claws Posta"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
